// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs component should render correctly no current 1`] = `
<Component
  className="ins-c-breadcrumbs"
>
  <Component
    data-key={0}
    key="0"
  >
    <a
      aria-label="first"
      onClick={[Function]}
    >
      First
    </a>
  </Component>
  <Component
    data-key={1}
    key="1"
  >
    <a
      aria-label="second"
      onClick={[Function]}
    >
      <span>
        Second
      </span>
    </a>
  </Component>
</Component>
`;

exports[`Breadcrumbs component should render correctly no items 1`] = `
<Component
  className="ins-c-breadcrumbs"
>
  <Component
    isActive={true}
  >
     
    Something
     
  </Component>
</Component>
`;

exports[`Breadcrumbs component should render correctly with items and current item 1`] = `
<Component
  className="ins-c-breadcrumbs"
>
  <Component
    data-key={0}
    key="0"
  >
    <a
      aria-label="first"
      onClick={[Function]}
    >
      First
    </a>
  </Component>
  <Component
    data-key={1}
    key="1"
  >
    <a
      aria-label="second"
      onClick={[Function]}
    >
      <span>
        Second
      </span>
    </a>
  </Component>
  <Component
    isActive={true}
  >
     
    Something
     
  </Component>
</Component>
`;
